--- a/ultrasound/pyproject.toml
+++ b/ultrasound/pyproject.toml
@@ -17,8 +17,8 @@ torch = "^2.0.0"
 torchvision = "^0.15.1"
 pytorch-lightning = "^2.0.0"
 pyarrow = "^11.0.0"
-sklearn = "^0.0.post1"
 aquarel = "^0.0.5"
+scikit-learn = "^1.2.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
