--- a/ultrasound/pyproject.toml
+++ b/ultrasound/pyproject.toml
@@ -19,11 +19,16 @@ pytorch-lightning = "^2.0.0"
 pyarrow = "^11.0.0"
 aquarel = "^0.0.5"
 scikit-learn = "^1.2.2"
+regressio = "^1.0.1"
+ipykernel = "^6.23.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
 rope = "^1.7.0"
 autopep8 = "^2.0.2"
+ipympl = "^0.9.3"
+plotly = "^5.14.1"
+nbformat = "^5.8.0"
 
 [tool.poetry.scripts]
 us = 'us.main:app'
