--- a/ultrasound/pyproject.toml
+++ b/ultrasound/pyproject.toml
@@ -25,6 +25,7 @@ streamlit = "^1.22.0"
 streamlit-plotly-events = "^0.0.6"
 lmfit = "^1.2.1"
 polars = "^0.19.1"
+filterpy = "^1.4.5"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
